--- a/programowanie/impleCalculatorMauiApp/MainPage.xaml
+++ b/programowanie/impleCalculatorMauiApp/MainPage.xaml
@@ -13,7 +13,7 @@
             <Entry x:Name="secondNumberEntry"/>
             <Button Text=" Oblicz"
                 Clicked="Button_Clicked"/>
-            <Label x:Name="resultLabelv"/>
+            <Label x:Name="resultLabel"/>
         </VerticalStackLayout>
     </ScrollView>
 
